tests/integration/cli/tests/snapshots/snapshot__snapshot_dash.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": null,
    "wasm_hash": "516e4c8a7100dbf1132826a2eb10ed94",
    "use_packages": [],
    "cli_args": [],
    "stdin": [
      101,
      99,
      104,
      111,
      32,
      50
    ],
    "debug_output": false,
    "enable_threads": true
  },
  "result": {
    "Success": {
      "stdout": "2\n",
      "stderr": "# # ",
      "exit_code": 0
    }
  }
}
