tests/integration/cli/tests/snapshots/snapshot__snapshot_dash_bash.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_dash_bash",
    "use_packages": [
      "wasmer/bash"
    ],
    "include_webcs": [],
    "cli_args": [],
    "stdin_hash": "31837f6a5667cb17dd97f274b20281bb",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "hi\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
