tests/integration/cli/tests/snapshots/snapshot__snapshot_dash_dash.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_dash_dash",
    "use_packages": [
      "wasmer/bash"
    ],
    "include_webcs": [],
    "cli_args": [],
    "stdin_hash": "702da725f176c20024965c8830b620ae",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "hi\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
