tests/integration/cli/tests/snapshots/snapshot__snapshot_dash_dev_urandom.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 642
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_dash_dev_urandom",
    "use_packages": [
      "sharrattj/coreutils"
    ],
    "include_webcs": [
      {
        "name": "sharrattj/coreutils@1.0.16"
      }
    ],
    "cli_args": [],
    "stdin_hash": "80a57e78213b40607259d3909a44b0cf",
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false,
    "enable_async_threads": false
  },
  "result": {
    "Success": {
      "stdout": "10\n",
      "stderr": "# # \n",
      "exit_code": 0
    }
  }
}
