tests/integration/cli/tests/snapshots/snapshot__snapshot_dash_dev_zero.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 622
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_dash_dev_zero",
    "use_packages": [
      "sharrattj/coreutils"
    ],
    "include_webcs": [
      {
        "name": "sharrattj/coreutils@1.0.16"
      }
    ],
    "cli_args": [],
    "stdin": [
      104,
      101,
      97,
      100,
      32,
      45,
      99,
      32,
      49,
      48,
      32,
      47,
      100,
      101,
      118,
      47,
      122,
      101,
      114,
      111
    ],
    "debug_output": false,
    "enable_threads": true,
    "enable_network": false,
    "enable_async_threads": false
  },
  "result": {
    "Success": {
      "stdout": "\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000\u0000",
      "stderr": "# # \n",
      "exit_code": 0
    }
  }
}
