tests/integration/cli/tests/snapshots/snapshot__snapshot_dash_echo_to_cat.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_dash_echo_to_cat",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "stdin_hash": "4a75babacd4e06efe6c6594a2864f61f",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "hello\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
