tests/integration/cli/tests/snapshots/snapshot__snapshot_dash_python.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_dash_python",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [
      {
        "name": "python/python@3.13.5"
      }
    ],
    "cli_args": [],
    "stdin_hash": "6e610cf236d75dfca9ad5360fc1846f8",
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "10\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
