tests/integration/cli/tests/snapshots/snapshot__snapshot_default_file_system_tree.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": null,
    "wasm_hash": "3126c7a8237b6c0f74126d76eaaedd8f",
    "use_packages": [],
    "cli_args": [
      "ls"
    ],
    "stdin": null,
    "debug_output": false,
    "enable_threads": true
  },
  "result": {
    "Success": {
      "stdout": "bin\ndev\netc\ntmp\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
